wordpress-example/06b-deploy-mysql.yml
# for versions before 1.9.0 use apps/v1beta2
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-mysql-dp
  namespace: wordpress-stack
  labels:
    app: wordpress
    app.kubernetes.io/component: database
    app.kubernetes.io/name: wordpress
spec:
  selector:
    matchLabels:
      app: wordpress
      tier: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wordpress
        tier: mysql
    spec:
      serviceAccount: mysql-sa
      containers:
      - image: mysql:5.6
        name: mysql
        resources:
          limits:
            memory: '1Gi'
            cpu: "1"
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-persistent-storage # which data will be stored
          mountPath: '/var/lib/mysql'
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pvc
