wordpress-example/07a-deploy-wordpress.yml
# for versions before 1.9.0 use apps/v1beta2
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-dp
  namespace: wordpress-stack
  labels:
    app: wordpress
    app.kubernetes.io/component: frontend
    app.kubernetes.io/name: wordpress
spec:
  selector:
    matchLabels:
      app: wordpress
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wordpress
        tier: frontend
    spec:
      serviceAccount: wordpress-sa
      containers:
      - image: wordpress:4.9-apache
        name: wordpress
        resources:
          limits:
            memory: '1Gi'
            cpu: "1"
        ports:
        - containerPort: 80
          name: wordpress
        volumeMounts:
        - name: wordpress-persistent-storage
          mountPath: '/var/www/html' # which data will be stored
      volumes:
      - name: wordpress-persistent-storage
        persistentVolumeClaim:
          claimName: wordpress-pvc
