wordpress-example/06a-svc-mysql.yml
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress-mysql # will be used as a value in
  namespace: wordpress-stack
  labels: # WORDPRESS_DB_HOST in wordpress-deploy.yml
    app: wordpress
    app.kubernetes.io/component: database
    app.kubernetes.io/name: wordpress
spec:
  ports:
    - port: 3306
  selector:
    app: wordpress
    tier: mysql
  type: ClusterIP
