wordpress-example/05-ingress-wordpress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-server
  annotations:
    #ingress.kubernetes.io/ssl-redirect: 'false'
    #kubernetes.io/ingress.class: "nginx"
    #kubernetes.io/ingress.class: "haproxy"
    #kubernetes.io/ingress.class: "traefik"

spec:
  rules:
    - host: wordpress.dockerlabs.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wordpress-svc
                port:
                  number: 80
