wordpress-example/08-ingress-wordpress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-server
  namespace: wordpress-stack
  labels:
    app.kubernetes.io/name: wordpress
  annotations:
    ingress.kubernetes.io/ssl-redirect: 'false'

spec:
  rules:
  - host: wordpress.dockerlabs.de
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wordpress-svc
            port:
              number: 80
